sonar issues